@@ -111,6 +111,11 @@
             <artifactId>maven-archiver</artifactId>
             <version>3.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -136,6 +141,9 @@
                             <artifactId>lombok</artifactId>
                         </path>
                     </annotationProcessorPaths>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -157,7 +165,7 @@
                 <configuration>
                     <nodeVersion>v23.6.1</nodeVersion>
                     <npmVersion>10.9.2</npmVersion>
-                    <workingDirectory>../ai-forgot-this-frontend</workingDirectory>
+                    <workingDirectory>dep/ai-forgot-this-frontend</workingDirectory>
                 </configuration>
 
                 <executions>
